# Synthetic_data_collection_with_ExoSuit

./: .gitignore  README.md  start_isaac_bridge.sh
assets/assemblies/: left_hand_only.usd  right_hand_only.usd  robot_full.usd  robot_test.usd  test_left.usd  test_right.usd  two_eff.usd
assets/assembly/: s40&sharpa.xml  s40_sharpa.xml
assets/assembly/s40_sharpa/: s40_sharpa.usd
assets/assembly/s40_sharpa/configuration/: s40_sharpa_physics.usd  s40_sharpa_robot.usd  s40_sharpa_sensor.usd
assets/s40/biped_s40/meshes/: l_hand_roll_no_gripper.STL  r_hand_roll_no_gripper.STL
assets/s40/biped_s40/urdf/: biped_s40.urdf  biped_s40_no_grippers.urdf
assets/sharpa_wave/: right_hand_s40.xml
assets/sharpa_wave/left_hand_s40/: left_hand_s40.usd
assets/sharpa_wave/left_hand_s40/configuration/: left_hand_s40_physics.usd  left_hand_s40_robot.usd  left_hand_s40_sensor.usd
assets/sharpa_wave/right_hand_s40/: right_hand_s40.usd
assets/sharpa_wave/right_hand_s40/configuration/: right_hand_s40_robot.usd  (+2 more)
control/: __init__.py  hand_command_mapper.py  isaac_hand_controller.py  ros2_hand_command_subscriber.py  ros_hand_command_subscriber.py
docker/exo_ros_bridge/: docker-compose.yml
docker/exo_ros_bridge/ros1/: Dockerfile
docker/exo_ros_bridge/ros1/dynamic_biped/: CMakeLists.txt  package.xml
docker/exo_ros_bridge/ros2/: Dockerfile
exo2isaacsim/src/isaac_eff_control/: package.xml  setup.cfg  setup.py
exo2isaacsim/src/isaac_eff_control/isaac_eff_control/: arm_control_node.py  eff_control_node.py
tests/: test_hand_command_mapper.py  test_left_hand_ros2_publisher.py
(+25 files in other folders)
