<?xml version="1.0"?>
<package format="2">
  <name>dynamic_biped</name>
  <version>0.0.1</version>
  <description>ROS1 interfaces required by the ExoSuit bridge.</description>

  <maintainer email="you@example.com">Ivan Mokiets</maintainer>
  <license>HIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
